# drawbot-cli-tools

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  pyproject.toml  readme.md
_archive/: README.md
_archive/cli/: main.py  spec.py
_archive/cli/evolve/: __init__.py  brand_dna.json  contact_sheet.py  evolution.py  genome.py  render.py  semantics.py  server.py
_archive/cli/evolve/generators/: __init__.py  geometric.py  layered_form.py
_archive/docs/: guide.md
_archive/lib/: drawbot_backend.py  drawbot_design_system.py
_archive/tests/: test_design_system.py  test_drawbot_backend.py  test_drawbot_grid.py  test_evolve.py
cli/: main.py  spec.py
drawbot_cli/: __main__.py  app.py  create.py  design.py
drawbot_cli/commands/: api.py  create.py  design.py  doctor.py  new.py  recipe.py  run.py  spec.py
drawbot_cli/recipes/: __init__.py  core.py
drawbot_cli/runtime/: skia.py
drawbot_cli/spec/: core.py
fixtures/brand_artifacts/: WORKFLOW.md  social-quote.content.yaml  social-quote.recipe.yaml  social-quote.review.yaml
lib/: drawbot_grid.py
tests/: test_cli.py  test_cli_main.py  test_create_cli.py  test_design_cli.py  test_drawbot_backend.py  test_recipe_cli.py  test_spec.py  test_spec_contract.py
